# backend-local/api/openapi.yml
@@ -5,7 +5,7 @@ info:
     \ metrics. (Deployed per country)"
   version: v0.1.0
 servers:
-- url: http://localhost:46573
+- url: http://localhost:37345
   description: Generated server url
 paths:
   /api/v1/lots:
@@ -14,6 +14,15 @@ paths:
       - lot-controller
       operationId: listLots
       parameters:
+      - name: statutLot
+        in: query
+        required: false
+        schema:
+          type: string
+          enum:
+          - CONFORME
+          - EN_ALERTE
+          - PERIME
       - name: page
         in: query
         description: Zero-based page index (0..N)
@@ -227,6 +236,18 @@ paths:
         schema:
           type: integer
           format: int64
+      - name: from
+        in: query
+        required: false
+        schema:
+          type: string
+          format: date-time
+      - name: to
+        in: query
+        required: false
+        schema:
+          type: string
+          format: date-time
       - name: page
         in: query
         description: Zero-based page index (0..N)
@@ -284,6 +305,23 @@ paths:
       - alerte-controller
       operationId: listAlertes
       parameters:
+      - name: statutAlerte
+        in: query
+        required: false
+        schema:
+          type: string
+          enum:
+          - OUVERTE
+          - NOTIFIEE
+          - CLOTUREE
+      - name: typeAlerte
+        in: query
+        required: false
+        schema:
+          type: string
+          enum:
+          - CONDITION_NON_IDEALE
+          - LOT_TROP_ANCIEN
       - name: page
         in: query
         description: Zero-based page index (0..N)
@@ -500,14 +538,14 @@ components:
         offset:
           type: integer
           format: int64
-        paged:
-          type: boolean
         pageNumber:
           type: integer
           format: int32
         pageSize:
           type: integer
           format: int32
+        paged:
+          type: boolean
         sort:
           $ref: "#/components/schemas/SortObject"
         unpaged:
